[tool.poetry]
name = "book-recommendations-bot"
version = "0.1.0"
description = ""
authors = ["Konstantin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
aiogram = "3.10"
pydantic = "2.8.2"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
